re PR target/69129 (ICE in get_attr_got, at config/mips/mips.md:694 on mips-linux-gnu)

PR target/69129
	PR target/69012
	* config/mips/mips.c (mips_compute_frame_info): Initialise
	args_size and hard_frame_pointer_offset fields of the frame
	structure before calling mips_global_pointer.

	PR target/69129
	* gcc.target/mips/pr69129.c: New.

From-SVN: r232674